Move and update makefile; change background color for version selector drop-down; combine header/footer and sidebar js into single file

--- a/f5_sphinx_theme/static/css/f5-theme.css
+++ b/f5_sphinx_theme/static/css/f5-theme.css
@@ -976,7 +976,7 @@ table.docutils.footnote, table.docutils.footnote > tbody, table.docutils.footnot
 }
 #other_versions {
   padding: 10px;
-  background-color: #00b0ed;
+  background-color: #d5d3dc;
 }
 .version_list {
   margin-bottom: 5px;
